fixes: code improvement

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "A fast, flexible directory and file brute-forcing tool written in Node.js.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js"
   },
